--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,8 @@ html {
     --color-text: #4C1E00;
     --color-light: #ffffff;
     --color-link: #798A8D;
-    --color-link-hover: #467687;
+    --color-link-hover: #595959;
+    /* --color-link-hover: #467687; */
     --color-footer: #595959;
     --color-shadows: #9AA2A3;
 
@@ -43,6 +44,7 @@ html {
 }
 
 body {
+    margin: 0;
     font-family: var(--font-family-base);
     font-size: 1rem;
     color: var(--color-text);
@@ -261,6 +263,7 @@ h4 {
     border: transparent;
     border-radius: var(--border-radius);
     box-shadow: 0 0 0.2rem var(--color-shadows);
+    user-select: none;
 }
 
 .intro__nav-item:hover {
@@ -283,6 +286,7 @@ h4 {
 .intro__nav-description {
     padding-left: 2rem;
     padding-right: 2rem;
+    display: none;
 }
 
 .intro__nav-link-container {
@@ -498,12 +502,16 @@ h4 {
 
 
 .icon-list-item:hover .footer-icon-svg path {
-    stroke: var(--color-link-hover);
+    stroke: var(--color-shadows);
 }
 
 .footer__link {
     color: var(--color-light);
     font-size: clamp(0.9rem, 2vw, 1.4rem);
+}
+
+.footer__link:hover {
+    color: var(--color-shadows);
 }
 
 @media (min-width: 350px) {
@@ -555,6 +563,7 @@ h4 {
 
     .intro__nav-description {
     padding-left: 0;
+    display: flex;
     }
 
     .picture--container-inner {
